--- a/cs01.Rmd
+++ b/cs01.Rmd
@@ -45,5 +45,5 @@ An Introduction to Statistical Learning with Applications in R, James et al (201
 
 [Least squares and robust regression](decks/cs01_3_deck.html)
 
-[Introduction to Causal Inference](decks/cs01_4_deck.html)
+[Introduction to causal inference](decks/cs01_4_deck.html)
 
